benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_DivMod_Mul_Zeroes_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Mul_Zeroes.rs
Time: 2025-09-15 18:50:04

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:40:5
   |
25 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
40 |     result
   |     ^^^^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:48:15
   |
48 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:49:9
   |
44 | exec fn mod_exp(base: nat, exp: nat, modd: nat) -> nat
   |                                                    --- expected `vstd::prelude::nat` because of return type
...
49 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:51:39
   |
51 |         let res = mod_exp(base, exp / 2, modd);
   |                                 ---   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:53:18
   |
53 |         if exp % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:53:23
   |
53 |         if exp % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:66:13
   |
66 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:71:21
   |
71 |         while num > 0
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:75:32
   |
75 |             let bit = if num % 2 == 0 { '0' } else { '1' };
   |                          ---   ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:75:37
   |
75 |             let bit = if num % 2 == 0 { '0' } else { '1' };
   |                          -------    ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:77:25
   |
77 |             num = num / 2;
   |                   ---   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:40:5
   |
25 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
40 |     result
   |     ^^^^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:48:15
   |
48 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:49:9
   |
44 | exec fn mod_exp(base: nat, exp: nat, modd: nat) -> nat
   |                                                    --- expected `vstd::prelude::nat` because of return type
...
49 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:51:39
   |
51 |         let res = mod_exp(base, exp / 2, modd);
   |                                 ---   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:53:18
   |
53 |         if exp % 2 == 0 {
   |            ---   ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:53:23
   |
53 |         if exp % 2 == 0 {
   |            -------    ^ expected `nat`, found integer
   |            |
   |            expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:66:13
   |
66 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:71:21
   |
71 |         while num > 0
   |               ---   ^ expected `nat`, found integer
   |               |
   |               expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:75:32
   |
75 |             let bit = if num % 2 == 0 { '0' } else { '1' };
   |                          ---   ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:75:37
   |
75 |             let bit = if num % 2 == 0 { '0' } else { '1' };
   |                          -------    ^ expected `nat`, found integer
   |                          |
   |                          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_DivMod_Mul_Zeroes_impl.rs:77:25
   |
77 |             num = num / 2;
   |                   ---   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
